# pcc116-2026-1

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  flake.nix
haskell/: pcc116.cabal
haskell/app/: Main.hs
haskell/src/CoC/: Check.hs  CoC.hs  Encode.hs  README.md  Reduce.hs  Subst.hs  Tactic.hs
haskell/src/CoC/Parser/: TermParser.hs
haskell/src/CoC/Pretty/: Term.hs
haskell/src/CoC/Syntax/: Term.hs
haskell/src/ProofSearch/: ProofSearch.hs  README.md  Rules.hs  Search.hs
haskell/src/ProofSearch/Parser/: SequentParser.hs
haskell/src/ProofSearch/Pretty/: ProofTree.hs
haskell/src/ProofSearch/Syntax/: Formula.hs
haskell/src/Typed/: Interpreter.hs  README.md  Tactic.hs  Typechecker.hs  Typed.hs
haskell/src/Typed/Parser/: DeBruijnParser.hs  NamedParser.hs  TypeParser.hs
haskell/src/Typed/Pretty/: DeBruijn.hs  Named.hs  Type.hs
haskell/src/Typed/Syntax/: DeBruijn.hs  Named.hs  Type.hs
haskell/src/Untyped/: Interpreter.hs  README.md  Untyped.hs
haskell/src/Untyped/Parser/: DeBruijnParser.hs  NamedParser.hs
haskell/src/Untyped/Pretty/: DeBruijn.hs  Named.hs
haskell/src/Untyped/Syntax/: DeBruijn.hs  Named.hs
lean/: lake-manifest.json
lean/Pcc116/: Aula02.lean  Aula03.lean  Aula04.lean  Aula05.lean  Aula06.lean  Aula07.lean  Aula08.lean  Aula09.lean  Aula10.lean  Aula11.lean  Aula12.lean
listas/lista01/: lista.tex
listas/lista02/: Lista02.lean  README.md  lake-manifest.json  lakefile.toml
listas/lista02/Lista02/: Basic.lean
pcc116/: Pcc116.lean  README.md  lakefile.toml
pcc116/Pcc116/: Aula01.lean
slides/apresentacao/: apresentacao.md
slides/aula01/: aula01.md
slides/aula02/: aula02.md
slides/aula03/: aula03.md
slides/aula04/: aula04.md
slides/aula05/: aula05.md
slides/aula06/: aula06.md
slides/aula07/: aula07.md
slides/aula08/: aula08.md
slides/aula09/: aula09.md
slides/aula10/: aula10.md
